Issue #22/#168: Script Page spacing issues
- Issue #22: Fixed spacing/border-bottom issue on contact-info
container.
- Issue #168: Fixed spacing issues at top of right column on desktop
when no contact info is present.

--- a/docroot/sites/all/themes/custom/boston/src/sass/components/node_type/_script-page.scss
+++ b/docroot/sites/all/themes/custom/boston/src/sass/components/node_type/_script-page.scss
@@ -9,9 +9,11 @@
     padding: 30px 0 10px;
   }
 
-  .contact-info {
+  .sidebar.script-page {
     @include margin-top(1);
+  }
 
+  .contact-info {
     margin-bottom: 30px;
     padding-bottom: 30px;
     border-bottom: 1px dashed color(border);
